# OUH-Internship-Krzysztof-Nowak

./: .gitattributes  .gitignore  10_benchmark.py  ALGORITHM_ERRORS_FIXES_SUMMARY.md  ALL_IMPROVEMENTS_IMPLEMENTATION_SUMMARY.md  BIOMEDICAL_IMPROVEMENTS_SUMMARY.md  Boruta_benchmark.py  CLASSIFICATION_PICKLE_FIX_SUCCESS.md  COMPREHENSIVE_ALGORITHM_FAILURE_FIXES.md  COMPREHENSIVE_ANALYSIS_AND_SOLUTION.md  COMPREHENSIVE_NAN_FIXES_SUMMARY.md  CRITICAL_NAN_FIXES_SUMMARY.md  EMERGENCY_FIX_SUCCESS_REPORT.md  ENHANCED_PREPROCESSING_IMPLEMENTATION.md  FIXES_SUMMARY.md  FUSION_ERROR_FIXES_SUMMARY.md  FUSION_IMPLEMENTATION_SUMMARY.md  FUSION_UPGRADES_SUMMARY.md  GENOMIC_OPTIMIZATION_STRATEGY.md  INTEGRATION_OPTIMIZATION_STRATEGY.md  K_NEIGHBORS_FIXES_SUMMARY.md  MAIN_PIPELINE_INTEGRATION_SUMMARY.md  METRICS_AND_PLOTS_VERIFICATION_REPORT.md  METRIC_EVALUATION_FIXES_SUMMARY.md  MRMR_benchmark.py  NAN_HANDLING_FIXES_SUMMARY.md  NMF_benchmark.py  OVERFLOW_ERROR_FIX_SUCCESS.md  PCA_beanchmark  PICKLE_ERROR_FIX_SUCCESS.md  PIPELINE_ORDER_FIX_SUCCESS.md  QUICK_START_Fast_Feature_Selection.md  R2_Analysis_Summary_Report.md  README.md  README_Fast_Feature_Selection.md  REFACTORING_SUMMARY.md  Streamlined_MCC_Analysis_Summary.md  Streamlined_R2_Analysis_Summary.md  TUNER_ENHANCEMENT_SUMMARY.md  WARNING_REDUCTION_SUCCESS_SUMMARY.md  (+82 more)
.cache/: extractor_reg_None_Gene Expression_0_freg_8_ba28e098365c04284e9fcaf449816dc2.pkl  extractor_reg_None_Gene Expression_1_FastICA_8_ca225215884386c0ce897da68f12f1aa.pkl  extractor_reg_None_Gene Expression_1_freg_8_f57e602c8dcbd3b2c0aa78ee145f0bc5.pkl  extractor_reg_None_Gene Expression_2_FastICA_8_31409942e45c7af79ddf8083dd11f406.pkl  extractor_reg_None_Gene Expression_2_NMF_8_58a0ef511bf8611f3996b187cb0e7499.pkl  extractor_reg_None_Gene Expression_2_boruta_reg_8_0e54b2fdd7d9da061a3c819d21ac8d54.pkl  extractor_reg_None_Methylation_0_NMF_8_99cc6cbe5b41b0abc0a6d51ec72fb016.pkl  extractor_reg_None_Methylation_0_enet_8_9592a766ddeb9457b97a3c4202da228b.pkl  extractor_reg_None_Methylation_1_FastICA_8_6b72c56510eae043e26437d68a60851f.pkl  extractor_reg_None_Methylation_1_enet_8_ab1c095abf79fd25203cf7ebda326639.pkl  extractor_reg_None_Methylation_2_NMF_8_38390774fecdfa60e1defc4b03caf03e.pkl  extractor_reg_None_Methylation_2_boruta_reg_8_b679eb84badde0a0b41de6352b0bddde.pkl  extractor_reg_None_miRNA_0_NMF_8_84a0d95ffb5a85d9b58d22f3eb8c6525.pkl  extractor_reg_None_miRNA_0_freg_8_fed23b08742eb54ceb241d5b7b7ee6a9.pkl  extractor_reg_None_miRNA_1_FactorAnalysis_8_b0aa7743a753db4ee6d963e47a7077aa.pkl  extractor_reg_None_miRNA_1_FastICA_8_e48f99bb6f7eeda56d939cefa337873d.pkl  extractor_reg_None_miRNA_1_NMF_8_272b1d9bf0ec76a6a5f563937ce4644e.pkl  extractor_reg_None_miRNA_1_freg_8_f9b5733b0e19c7fef0d365b77478cce5.pkl  extractor_reg_None_miRNA_2_NMF_8_aa743121d176366873aaa0dc25ebacce.pkl  extractor_reg_None_miRNA_2_freg_8_2b6a6baf286576e585eb981a7467df9b.pkl
Boruta/: output_1.csv  output_10.csv  output_2.csv  output_3.csv  output_4.csv  output_5.csv  output_6.csv  output_7.csv  output_8.csv  output_9.csv
ICA/: ica_output.csv  output_1.csv  output_10.csv  output_2.csv  output_3.csv  output_4.csv  output_5.csv  output_6.csv  output_7.csv  output_8.csv  output_9.csv
LASSO/: output.txt  output_1.csv  output_10.csv  output_2.csv  output_3.csv  output_4.csv  output_5.csv  output_6.csv  output_7.csv  output_8.csv  output_9.csv
LDA/: lda_output.csv  output_1.csv  output_10.csv  output_2.csv  output_3.csv  output_4.csv  output_5.csv  output_6.csv  output_7.csv  output_8.csv  output_9.csv
MRMR/: output.txt  output_1.csv  output_10.csv  output_2.csv  output_3.csv  output_4.csv  output_5.csv  (+4 more)
setup_and_info/: MRMR_FIX_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_installation.py
(+4654 files in other folders)
